--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "scripts": {
     "serve": "python3 -m http.server 8000",
     "dev": "python3 -m http.server 8000"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.48.1"
   }
 }
